@@ -1,29 +1,24 @@
 package com.boyouquan.service.impl;
 
 import com.boyouquan.constant.CommonConstants;
-import com.boyouquan.enumeration.BlogEnums;
-import com.boyouquan.model.BlogAccessSummary;
-import com.boyouquan.model.BlogAggregate;
-import com.boyouquan.model.LatestNews;
-import com.boyouquan.service.BlogAccessService;
-import com.boyouquan.service.BlogPostService;
-import com.boyouquan.service.LatestNewsService;
+import com.boyouquan.model.*;
+import com.boyouquan.service.*;
 import com.boyouquan.util.CommonUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 @Service
 public class LatestNewsServiceImpl implements LatestNewsService {
 
     @Autowired
-    private BlogPostService blogPostService;
+    private BlogService blogService;
     @Autowired
-    private BlogAccessService blogAccessService;
+    private PostService postService;
+    @Autowired
+    private AccessService accessService;
 
     @Override
     public List<LatestNews> getLatestNews() {
@@ -51,61 +46,48 @@ public class LatestNewsServiceImpl implements LatestNewsService {
     }
 
     private List<LatestNews> getRecentAddedBlogsNews() {
-        List<BlogEnums> blogs = Arrays.stream(BlogEnums.values())
-                .sorted((o1, o2) -> o2.getCreatedAt().compareTo(o1.getCreatedAt()))
-                .limit(10)
-                .toList();
-
         final List<LatestNews> latestNews = new ArrayList<>();
-        blogs.forEach(blogEnums -> {
-            String feedAddress = blogEnums.getFeedAddress();
-            String blogAddress = CommonUtils.trimFeedURLSuffix(feedAddress);
-            BlogAggregate blogAggregate = blogPostService.getBlogByAddress(blogAddress);
-            if (null != blogAggregate) {
-                LatestNews news = new LatestNews();
-                String title = String.format(CommonConstants.BLOG_ADDED_WELCOME_PATTERN, blogAggregate.getName());
-                news.setTitle(title);
-                news.setLink(CommonConstants.BLOG_LIST_ADDRESS);
 
-                latestNews.add(news);
-            }
-        });
+        List<Blog> blogs = blogService.listRecentCollected(3);
+        for (Blog blog : blogs) {
+            LatestNews news = new LatestNews();
+            String title = String.format(CommonConstants.BLOG_ADDED_WELCOME_PATTERN, blog.getName());
+            news.setTitle(title);
+            news.setLink(CommonConstants.BLOG_LIST_ADDRESS);
+            latestNews.add(news);
+        }
 
-        return latestNews.stream().limit(3).toList();
+        return latestNews;
     }
 
     private List<LatestNews> getMostAccessedBlogsNews() {
-        BlogAccessSummary blogAccessSummary = blogAccessService.getMostAccessedBlogByLatestMonth();
-        if (null != blogAccessSummary) {
-            String title = String.format(CommonConstants.MOST_ACCESSED_BLOG_ANNOUNCE_PATTERN, blogAccessSummary.getBlogName(), blogAccessSummary.getAccessCount());
-            String domain = CommonUtils.getDomain(blogAccessSummary.getBlogAddress());
-            String link = String.format(CommonConstants.BLOG_ITEM_ADDRESS_PATTERN, domain);
+        BlogDomainNameAccess blogDomainNameAccess = accessService.getMostAccessedBlogDomainNameInLatestOneMonth();
+        Blog blog = blogService.getByDomainName(blogDomainNameAccess.getBlogDomainName());
 
-            List<LatestNews> mostAccessedBlogs = new ArrayList<>();
-            LatestNews news = new LatestNews();
-            news.setTitle(title);
-            news.setLink(link);
-            mostAccessedBlogs.add(news);
-            return mostAccessedBlogs;
-        }
-        return Collections.emptyList();
+        String title = String.format(CommonConstants.MOST_ACCESSED_BLOG_ANNOUNCE_PATTERN, blog.getName(), blogDomainNameAccess.getAccessCount());
+        String domain = CommonUtils.getDomain(blog.getAddress());
+        String link = String.format(CommonConstants.BLOG_ITEM_ADDRESS_PATTERN, domain);
+
+        LatestNews news = new LatestNews();
+        news.setTitle(title);
+        news.setLink(link);
+
+        return List.of(news);
     }
 
     private List<LatestNews> getMostUpdatedBlogsNews() {
-        BlogAggregate blogAggregate = blogPostService.getMostUpdatedBlogByLatestMonth();
-        if (null != blogAggregate) {
-            String title = String.format(CommonConstants.MOST_UPDATED_BLOG_ANNOUNCE_PATTERN, blogAggregate.getName(), blogAggregate.getPostCount());
-            String domain = CommonUtils.getDomain(blogAggregate.getAddress());
-            String link = String.format(CommonConstants.BLOG_ITEM_ADDRESS_PATTERN, domain);
+        BlogDomainNamePublish blogDomainNamePublish = postService.getMostPublishedInLatestOneMonth();
+        Blog blog = blogService.getByDomainName(blogDomainNamePublish.getBlogDomainName());
 
-            List<LatestNews> mostUpdatedBlogs = new ArrayList<>();
-            LatestNews news = new LatestNews();
-            news.setTitle(title);
-            news.setLink(link);
-            mostUpdatedBlogs.add(news);
-            return mostUpdatedBlogs;
-        }
-        return Collections.emptyList();
+        String title = String.format(CommonConstants.MOST_UPDATED_BLOG_ANNOUNCE_PATTERN, blog.getName(), blogDomainNamePublish.getPostCount());
+        String domain = CommonUtils.getDomain(blog.getAddress());
+        String link = String.format(CommonConstants.BLOG_ITEM_ADDRESS_PATTERN, domain);
+
+        LatestNews news = new LatestNews();
+        news.setTitle(title);
+        news.setLink(link);
+
+        return List.of(news);
     }
 
 }
